# morpheus

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Info.plist  License.txt  README.md  db.h  main.cpp  mainwindow.h  moc_predefs.h  morpheus.pro  resources.qrc
.github/workflows/: build.yml  linux_release.yml  windows_release.yml
.xcode/XCBuildData/: 703e0fadff3ccdc0a18b9d8c6a4bb449-buildRequest.json  703e0fadff3ccdc0a18b9d8c6a4bb449-desc.xcbuild  703e0fadff3ccdc0a18b9d8c6a4bb449-manifest.xcbuild  703e0fadff3ccdc0a18b9d8c6a4bb449-targetGraph.txt  BuildDescriptionCacheIndex-e952c22da693e941eafb3c066e3bc935  build.db  cc54ac2df7640c1b7cad48131237d103-buildRequest.json  cc54ac2df7640c1b7cad48131237d103-desc.xcbuild  cc54ac2df7640c1b7cad48131237d103-manifest.xcbuild
.xcode/morpheus.build/Debug/Qt Preprocess.build/: Script-5E618435888B9D49F8540165.sh  Script-7EF0942E79C014DCEC8976BC.sh  dgph
.xcode/morpheus.build/Debug/morpheus.build/: morpheus-project-headers.hmap
.xcode/morpheus.build/Debug/morpheus.build/Objects-normal/x86_64/: morpheus.LinkFileList
cmake/modules/: FindBoost.cmake
gtk/: CMakeLists.txt  connectionmanager.cc  connectionmanager.h  example-0  main.c  mainwindow.cc  peerwireclient.h  thread.c  thread.h
gtk/webui/: CMakeLists.txt  index.html  web.cc
libs/threadingSystem/: .project  CMakeLists.txt  RingsCEThreads.pro  main.cpp  mtc.h  semaphores.cpp  wait.cpp
libs/updater/: updater.pro
morpheus.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
morpheus.xcodeproj/project.xcworkspace/xcuserdata/pedro.xcuserdatad/: UserInterfaceState.xcuserstate
morpheus.xcodeproj/xcshareddata/xcschemes/: morpheus.xcscheme
src/: main.cpp  mainwindow.cpp  mainwindow.ui  secWindow.ui  secwindow.h
src/build-torrent-Desktop_Qt_5_15_2_clang_64bit-Debug/.qtc_clangd/: compile_commands.json
src/build-torrent-Desktop_Qt_5_15_2_clang_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.7C81586BEE811F44.idx  QAuthenticator.AED47DD798271D59.idx  QBitArray.FD1F65B6C514847B.idx  QByteArray.925CA14698E81CA8.idx  QCommonStyle.DE2CBB7A26638F1E.idx  QCryptographicHash.9ECED64C71CA13CA.idx  QDateTime.06B6E46258A5060D.idx  QDeadlineTimer.63D2DB7B93BB2B20.idx  QDialog.7B6807B8A1386785.idx  QDir.0320E21DA674BCE0.idx  QElapsedTimer.9DF60DBC3148494E.idx  QEvent.8A72DA346C0F66E3.idx  QFile.9A0F0E48C3301CC5.idx  QFileDialog.95BBD24679B649B3.idx  QFlags.5C6747F90686F48C.idx  QHostAddress.41DE50009807D505.idx  QIODevice.36FF3C08272CC7FF.idx  QImage.D6C3A9B7B2D5F041.idx  QLayout.A865E35E401E9920.idx  QLineEdit.D76030635F7AB02D.idx  QList.085AFF631DE27896.idx  QList.990E7D99880A9052.idx  QMainWindow.D2FE5BFCFF42E72A.idx  QMap.2DE94BF5D55B6DFB.idx  QMargins.4306E050CEE073D8.idx  QMatrix3x3.B34456C6D890BFC5.idx  QMatrix4x4.F087B16ABDCF8F20.idx  QMetaObject.75691CD3B302F2CD.idx  QMetaType.E65AAC0F95D0C128.idx  QMetaType.FA888AA1371AA163.idx  QMutex.F2C1FA43F69DA9AA.idx  QNetworkAccessManager.942964E7DBDD75A5.idx  QNetworkInterface.4AE5EBA47D1B605F.idx  QNetworkReply.15BAC943CC861A80.idx  QNetworkRequest.18C4A0CCCA380911.idx  QObject.1E3D5F2019EF946D.idx  QObject.B6DE4DFFB33F7C29.idx  QOpenGLContext.EA2317C47BEC7AD9.idx  QPaintDevice.7C8FE65762E61A21.idx  QPaintDeviceWindow.53E9F5C2746CE23B.idx  (+592 more)
src/db/: isam.h
src/neon/: CMakeLists.txt  mainwindow.cpp
src/player/: histogramwidget.cpp  histogramwidget.h  player.cpp  player.h  playercontrols.cpp  playercontrols.h  playlistmodel.cpp  playlistmodel.h  videowidget.cpp  videowidget.h
src/torrent/: CMakeLists.txt  mainwindow.cpp
toolchain/: android-arm64-toolchain.cmake  ios-arm64-toolchain.cmake  linux-arm64-toolchain.cmake  macos-silicon-toolchain.cmake  windows-arm64-toolchain.cmake
webui/: .travis.yml  package.json
webui/docker/: Dockerfile  run.sh
webui/public/: index.html
